# desert-services-hub

./: .dockerignore  .env.example  .gitignore  .markdownlint-cli2.jsonc  .mcp.json  180-day-tracker.md  AGENTS.md  Book2.xlsx  CATALOG-AUDIT.md  CHANGELOG.md  CLAUDE.md  Dockerfile  QUOTING-APP-DESIGN.md  README.md  TODO.md  biome.jsonc  catalog-comparison.csv  desert-services-full-logo.ai  desert-services.db  docker-compose.yml  instrumentation.ts  justfile  minio.license  next.config.mjs  package.json  server.ts  sync.md  test-multipage.ts  test-pdf.ts  tsconfig.json
.claude/: CLAUDE.md  hookify.no-anthropic-sdk.local.md  hookify.require-streaming-sync.local.md  settings.json
.claude/agents/: aia-parser-agent.md  cert-parser-agent.md  contract-match-agent.md  excel-parser-agent.md  gsd-codebase-mapper.md  gsd-debugger.md  gsd-executor.md  gsd-integration-checker.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-verifier.md
.claude/commands/: contract-extract.md  extract-accounts.md
.claude/hooks/: block-anthropic-sdk.js  block-anthropic-sdk.py  catalog-sync-warning.js  gsd-check-update.js  gsd-statusline.js
.minio/: minio.license
.planning/: CONTRACT-TRIAGE.md  EXTRACTION_AUDIT.md  MIGRATION-TO-LINUX.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/: 01-02-UAT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
app/: layout.tsx  page.tsx
app/catalog/: page.tsx
app/quotes/: page.tsx
app/settings/: page.tsx
app/takeoffs/: page.tsx
assets/logos/: desert-services-logo.ai
bun-example/: build.ts
bun-example/src/: APITester.tsx  App.tsx
components/: app-sidebar.tsx  empty-state.tsx  page-header.tsx
components/catalog/: bundles-section.tsx  catalog-category-card.tsx  catalog-content.tsx  catalog-item-row.tsx  category-dialog.tsx  delete-confirm-dialog.tsx  item-dialog.tsx  subcategory-dialog.tsx  unit-combobox.tsx
components/quotes/: inline-quote-editor.tsx  new-quote-button.tsx  new-quote-form.tsx  quote-editor.tsx  quote-pdf-preview.tsx  quote-workspace.tsx  quotes-empty-actions.tsx  quotes-header-actions.tsx  quotes-table.tsx  section-combobox.tsx
components/takeoffs/: floating-tools.tsx  takeoff-viewer.tsx
components/ui/: chart.tsx  logo.tsx
contracts/: NOI instructions- MyDEQ - mod.docx
docs/: BUN-OPTIMIZATION-SPRINTS.md  CLI_TOOLS.md  DEPLOYMENT-HARDWARE.md  OPERATIONS_PLAYBOOK.md  QUOTE-BUILDER-REDESIGN.md  QUOTING-APP-DESIGN.md  README.md  STORAGE-AND-OPTIMIZATION.md  SYSTEM_INTEGRATION.md  desert-services-2026-pricing.csv  servicetitan-vs-cro-comparison.md
docs/_archive/: DEPLOYMENT-HARDWARE.md  abbreviations_to_verify.md  contracts-database-schema.md  convo-referenced-001.md  current-work-status.md  desert-services-automation-plan-2.md  meeting.md  review-and-cloudflare-plan.md  shadcn-vite.md
docs/full contract ams mesa/: 24-057 Attach C-Current 2025.txt  24057-24PSA Desert Services Agmt_01-16 Out.txt  AZ Form 5005 AMS Mesa.txt
docs/planning/: data-needed.md  file-naming.md  pm-workflow.md  sla.md  todo.md
docs/processes/: sds-safety-plan-ACTUAL-FINDINGS.md  sds-safety-plan-quick-reference.md  sds-safety-plan-requests.md
docs/reference/: azure-entra-permissions.md  gric-dust-permits.md  maricopa-county-assessor-api.md  monday-webhooks.md  notion-file-uploads.md  testing-methodology.md
drafts/: insurance-exception-template.txt
files-for-work-all/: 01222611.md  SDB Purchase Order New(1) (58).md
files-for-work-all/catamount/: FW- 25206 Diamond View - Desert Services - WA.eml  FW- Diamond View at Ballpark SWPPP Needs.eml
files-for-work-all/old/: NOI instructions- MyDEQ.docx  Re 35S Desert Services SWPPP Services Subcontract.eml  Re [New Permit + Permit Revision Payment] DSV Legacy Business Park  9560 E. Pecos Rd., Mesa, AZ  FCL Builders- FW Your Maricopa Air Quality payment has been approved.eml
full contract ams mesa/: Construction Contract - MASSA - BCCG - Mesa, signed_REDACTED.txt
hooks/: use-quote-editor.ts  use-settings.ts  use-toast.ts  use-undo-redo.ts
lib/: minio.test.ts  minio.ts  monday-search.ts  takeoff-quote-store.ts  takeoff-store.ts  takeoff-to-quote.ts  takeoffs.ts  types.ts  utils.ts
lib/db/: index.ts  insurance.ts
lib/pdf/: generate-client.ts  generate-pdf.ts  generate.test.ts  generate.ts  pdf-builder.ts  pdfmake.d.ts  transform.ts  types.ts
lib/pdf-takeoff/: README.md  config.ts  index.ts  takeoff-types.ts  types.ts
lib/schemas/: contact.ts  (+8 more)
projects/adk-agents/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
projects/adk-agents/src/: __init__.py  config.py  main.py
projects/adk-agents/src/agents/: __init__.py  orchestrator.py  subagents.py
projects/adk-agents/src/prompts/: __init__.py  deep_researcher.py  email_drafter.py  monday_checker.py  notion_updater.py  orchestrator.py  reconciler.py
projects/adk-agents/src/tools/: __init__.py  mcp.py
projects/adk-agents/tests/: __init__.py  test_agents.py
quoting-example/: EditorToolbar.tsx  biome.json  build.ts  bun-env.d.ts  package.json  todo.md
scripts/: 001_create_quotes_tables.sql  002_seed_catalog_items.sql  003_create_takeoffs_table.sql  004_add_quote_estimator_fields.sql  catalog-reconcile.ts  check-insurance.ts  fetch-contract-attachments.ts  match-contractors.ts  normalize-contractors-final.ts  search-monday.ts  setup-insurance.ts  sync-monday.test.ts  sync-monday.ts  tag-signed-contracts.ts  test-pdf-gen.ts
services/: CONSOLIDATION-PLAN.md
services/mistral/: README.md  TODO-quality-validation.md  pyproject.toml
services/mistral/src/mistral_mcp/: __init__.py  cli.py  client.py  ocr.py  pdf_utils.py  server.py  split_ocr.py  types.py
services/mistral/tests/: __init__.py  conftest.py  test_document_qa.py  test_identify.py  test_ocr.py  test_pdf_utils.py  test_split_ocr.py
src/: server.ts
styles/: globals.css
(+851 files in other folders)
